-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b89
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8142623 | emb-9 | Roland Westrelin | P2 | Resolved | Fixed | team |
java -jar SPECjvm2008.jar --propfile props/specjvm.properties xml.transform xml.validation -ikv -ict
with 32b VM
ILW=H(crash/incorrect execution)L(seen once)H(none)=P2
with 32b VM
ILW=H(crash/incorrect execution)L(seen once)H(none)=P2
- backported by
-
JDK-8142623 phi == NULL assert in PhaseIdealLoop::try_move_store_after_loop
-
- Resolved
-
- relates to
-
JDK-8080289 Intermediate writes in a loop not eliminated by optimizer
-
- Resolved
-