8136926: phi == NULL assert in PhaseIdealLoop::try_move_store_after_loop

Multiple phis on same slice are possible in a loop

Reviewed-by: kvn, mcberg